final commit for all sections only in desktop responsiveness

--- a/webClone/index.html
+++ b/webClone/index.html
@@ -49,9 +49,6 @@
                 </p>
                 <p class="flex items-center gap-1">
                 Publications
-                <svg class="w-3 h-3" fill="currentColor" viewBox="0 0 20 20">
-                    <path d="M5.23 7.21a.75.75 0 0 1 1.06.02L10 10.94l3.71-3.71a.75.75 0 1 1 1.06 1.06l-4.24 4.25a.75.75 0 0 1-1.06 0L5.25 8.29a.75.75 0 0 1-.02-1.08z"/>
-                </svg>
                 </p>
             </div>
             </div>
@@ -167,7 +164,7 @@
             <p class="h-1 w-[40px] bg-yellow-500"></p>
             <p class="text-blue-900 text-xl font-bold">SOCIAL PROTECTION SCHEMES</p>
         </div>
-        <div class="flex gap-3 py-20 items-center flex-wrap">
+        <div class="flex gap-3 py-20 items-center justify-center flex-wrap">
             
             <div class="w-[400px] hover:bg-gray-100 transition duration-500 easy-in-out h-[300px] border-1 border-gray-200 rounded-[5px] items-center justify-center flex flex-col cursor-pointer">
                 <img src="imgs/public.svg" alt="" srcset="" class="w-20">
@@ -246,6 +243,174 @@
             <span class="text-yellow-500">data driven</span>, high performing organization and a big part of that is to complete its
             <span class="text-yellow-500">shift to digital</span>.
         </p>
+        <div class="flex pt-15 gap-7">
+            <div class="flex flex-col gap-5">
+                <div class="bg-gray-100 rounded-full w-[81px] h-[80px] flex items-center justify-center">
+                    <img src="imgs/stat.svg" alt="" srcset="" class="w-8 h-8">
+                </div>
+                <h1 class="text-2xl pt-5 font-bold">
+                    Changing from Legacy processes and systems
+                </h1>
+                <p class="text-gray-600 ">
+                    As we enter a new era of technology advances and data-driven business models, 
+                    we are upgrading our systems and processes to gain in operational efficiency, 
+                    address technology constraints, meet members experience expectations and support 
+                    adoption and integration with other systems.
+                </p>
+            </div>
+
+            <div class="flex flex-col gap-5">
+                <div class="bg-gray-100 rounded-full w-[81px] h-[80px] flex items-center justify-center">
+                    <img src="imgs/file.svg" alt="" srcset="" class="w-8 h-8">
+                </div>
+                <h1 class="text-2xl pt-5 font-bold">
+                    Non-paper based processes
+                </h1>
+                <p class="text-gray-600">
+                    We are moving away from the time-taking processes as we process large number of member's claims. 
+                    Members and partners will be enjoying the benefits such as timely and faster responses and 
+                    reimbursements for their claims by reducing the time taken for processes to be completed.
+
+
+                </p>
+            </div>
+
+            <div class="flex flex-col gap-5">
+                <div class="bg-gray-100 rounded-full w-[81px] h-[80px] flex items-center justify-center">
+                    <img src="imgs/shield.svg" alt="" srcset="" class="w-8 h-8">
+                </div>
+                <h1 class="text-2xl pt-5 font-bold">
+                    Ensure the compliance rate in mandatory contributions
+                </h1>
+                <p class="text-gray-600">
+                    Digital-led compliance for private and public institutions to ensure the compliance and 
+                    fraud monitoring. Our members will have a seamless and transparent access of their 
+                    contributions/benefits via intelligent systems and notification ecosystem.
+                </p>
+            </div>
+        </div>
     </section>
+
+    <section class="px-60 py-20 bg-gray-100">
+        <div class="border-l-3 border-l-yellow-500">
+            <div class="px-15 py-5">
+                <p class="text-[25px] w-[800px]">
+                    “We have ambitious plans to transform RSSB, by 2025, into an organisation that is not just fully 
+                    committed to delivering for our members but that puts members at the heart of all our planning and 
+                    all our decision-making. Our vision is for RSSB to use all of its power and energy on behalf of our 
+                    members: to be best-in-class in serving their interests, as a friend and source of help, as a modern, 
+                    efficient organisation, with user-friendly, enabling technology; as a source of input to Government 
+                    thinking; as a national and international thought-leader in social policy; as the leading strategic 
+                    investor in our chosen markets; and as a prudent but ambitious business partner."
+                </p>
+                <div class="flex items-center gap-5 pt-10">
+                    <img src="imgs/image.webp" alt="" srcset="" class="w-20 h-20 rounded-full">
+                    <div>
+                        <p class="text-[20px]">Regis RUGEMANSHURO</p>
+                        <p class="text-gray-600 text-[20px]">CEO, RSSB</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="px-60 py-20">
+        <div class="flex items-center justify-center gap-3">
+            <p class="h-1 w-[40px] bg-yellow-500"></p>
+            <p class="text-blue-900 text-xl font-bold uppercase">news & events</p>
+        </div>
+        <div class="flex gap-5 justify-center pt-20">
+            <div class=" cursor-pointer hover:bg-blue-50">
+                <div class="w-[400px]">
+                    <img src="imgs/image (1).webp" alt="" srcset="" class="w-[400px] h-[270px] pb-7">
+                    <div class="px-3">
+                        <small class="text-gray-600">8 months ago</small>
+                        <h5 class="py-5 font-bold text-[18px]">RSSB Engages the Private Sector on Pension Reforms and ...</h5>
+                        <p class="text-gray-600 pb-5">
+                            Kigali: Thursday, November 28th, 2024 – The Rwanda Social Security Board (RSSB) 
+                            engaged with the private sector to discuss upcoming pension reforms, h...
+                        </p>
+                        <hr class="text-gray-400">
+                        <p class="text-blue-900 py-5 cursor-pointer">Read more ...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" cursor-pointer hover:bg-blue-50">
+                <div class="w-[400px]">
+                    <img src="imgs/image (2).webp" alt="" srcset="" class="w-[400px] h-[270px] pb-7">
+                    <div class="px-3">
+                        <small class="text-gray-600">2 years ago</small>
+                        <h5 class="py-5 font-bold text-[18px]">RSSB champions youth basketball in EjoHeza Tournament....</h5>
+                        <p class="text-gray-600 pb-5">
+                            On 14th January 2014, Rwanda Social Security Board (RSSB) participated in the 3x3 
+                            EjoHeza Tournament, collaboratively organized by partner basketball ...
+                        </p>
+                        <hr class="text-gray-400">
+                        <p class="text-blue-900 py-5 cursor-pointer">Read more ...</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" cursor-pointer hover:bg-blue-50">
+                <div class="w-[400px]">
+                    <img src="imgs/image (3).webp" alt="" srcset="" class="w-[400px] h-[270px] pb-7">
+                    <div class="px-3">
+                        <small class="text-gray-600">2 years ago</small>
+                        <h5 class="py-5 font-bold text-[18px]">RSSB gets data controller certification...</h5>
+                        <p class="text-gray-600 pb-5">
+                            The National Cyber Security Authority (NCSA) presented Rwanda Social Security 
+                            Board (RSSB) with Data Controller certification, following the instituti...
+
+                        </p>
+                        <hr class="text-gray-400">
+                        <p class="text-blue-900 py-5 cursor-pointer">Read more ...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex justify-center pt-20">
+            <button class=" border-1 border-blue-900 text-blue-900 px-10 py-3 font-bold hover:bg-blue-900 hover:text-white rounded-[5px] transition easy-in-out duration-500 cursor-pointer">View more</button>
+        </div>
+    </section>
+
+    <section class="bg-gray-100 px-60 pt-20">
+        <div class="flex justify-between">
+            <div class="flex flex-col gap-3">
+                <p class="font-bold text-xl pb-5 uppercase">Get in touch</p>
+                <p class="text-gray-600">KN 3 Rd African Union Boulevard</p>
+                <p class="text-gray-600">Kiyovu, Nyarugenge</p>
+                <p class="text-gray-600">P.O Box 250/6655 Kigali-Rwanda</p>
+                <p class="text-gray-600">Tel: 4044 Toll free line</p>
+                <p class="text-gray-600 pl-7"> 5006 EjoHeza</p>
+            </div>
+
+            <div class="flex flex-col gap-3">
+                <p class="font-bold text-xl pb-5 uppercase">Important Links</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Tenders</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Gallery</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Announcements</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Privacy Policy</p>
+
+            </div>
+
+             <div class="flex flex-col gap-3">
+                <p class="font-bold text-xl pb-5 uppercase">services</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Apply for employee number</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Check for your contributions</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Pay employee contributions</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">Pension simulator</p>
+                <p class="text-gray-600 cursor-pointer hover:underline">RSSB clearance certificate</p>
+
+            </div>
+
+        </div>
+        <hr class="text-gray-400 mt-10">
+        <div class="text-gray-600 py-5">
+            &copy; 2025 Rwanda Social Security Board
+        </div>
+    </section>
+
 </body>
 </html>
